--- a/xxpay4spring-cloud/xxpay-service/pom.xml
+++ b/xxpay4spring-cloud/xxpay-service/pom.xml
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>com.github.binarywang</groupId>
 			<artifactId>weixin-java-pay</artifactId>
-			<version>2.8.0</version>
+			<version>2.9.0</version>
 		</dependency>
 		<!--ali_pay-->
 		<dependency>
@@ -50,7 +50,7 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/alipay-sdk-java20170818173712.jar</systemPath>
 		</dependency>
-	</dependencies>
+	</dependencies>paychan
 
 	<build>
 		<resources>
