weixin-java-pay采用最新的2.9.0版本

--- a/xxpay4spring-cloud/xxpay-service/pom.xml
+++ b/xxpay4spring-cloud/xxpay-service/pom.xml
@@ -50,7 +50,7 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/alipay-sdk-java20170818173712.jar</systemPath>
 		</dependency>
-	</dependencies>paychan
+	</dependencies>
 
 	<build>
 		<resources>
