移除dubbo、spring-cloud版本，修改spring-boot版本名称

--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
     <module>xxpay-common</module>
     <module>xxpay-dal</module>
     <module>xxpay-mgr</module>
-    <module>xxpay-shop</module>
-    <module>xxpay4spring-cloud</module>
-    <module>xxpay4dubbo</module>
+    <!-- <module>xxpay-shop</module> -->
+    <!-- <module>xxpay4spring-cloud</module>
+    <module>xxpay4dubbo</module> -->
     <module>xxpay4spring-boot</module>
   </modules>
 
