--- a/xxpay4spring-boot/src/main/resources/application.yml
+++ b/xxpay4spring-boot/src/main/resources/application.yml
@@ -4,3 +4,5 @@ spring:
      include:
        #- activeMQ
        - rabbitMQ # 需要安装延迟队列插件：https://www.rabbitmq.com/blog/2015/04/16/scheduling-messages-with-rabbitmq/
+  application:
+    name: xxpay
