--- a/xxpay-mgr/src/main/resources/application-test.properties
+++ b/xxpay-mgr/src/main/resources/application-test.properties
@@ -31,6 +31,6 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 #spring.datasource.useGlobalDataSourceStat=true
 
 ### \u65E5\u5FD7
-logging.file=./log/xxpay-mgr.log
+logging.file=/datalog/xxpay/xxpay-mgr.log
 
 spring.mvc.favicon.enabled = false
