--- a/jeepay-payment/pom.xml
+++ b/jeepay-payment/pom.xml
@@ -130,6 +130,11 @@
             <version>pls-1.3.0</version>
         </dependency>
 
+        <!-- Knife4j  -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 
