参考配置文件支持docker容器访问形式。

--- a/conf/merchant/application.yml
+++ b/conf/merchant/application.yml
@@ -30,9 +30,9 @@ spring:
       number_format: '#' #数字格式进行原样显示，不加格式化字符例如  100,00
   datasource:
     # yml填写url连接串， 无需将&符号进行转义
-    url: jdbc:mysql://172.20.0.10:3306/jeepaydb?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
-    username: jeepay
-    password: jeepay
+    url: jdbc:mysql://mysql8:3306/jeepaydb?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
+    username: root
+    password: jeepaydb123456
     druid:
       # 连接池配置项
       initial-size: 5 #初始化时建立物理连接的个数
@@ -55,7 +55,7 @@ spring:
   cache:
     type: redis
   redis:
-    host: 172.20.0.12
+    host: redis6
     port: 6379
     database: 2    #1库：运营平台  #2库：商户系统 #3库：支付网关
     timeout: 1000
@@ -101,7 +101,7 @@ logging:
   level:
     root: info   #主日志级别
     com.jeequan.jeepay: debug   #该项目日志级别，当需要打印sql时请开启为debug
-  path: ./logs  #日志存放地址
+  path: /jeepayhomes/service/logs  #日志存放地址
 
 # knife4j APIDOC文档
 knife4j:
@@ -119,7 +119,7 @@ isys:
   cache-config: false
 
   oss:
-    file-root-path: /home/jeepay/upload #存储根路径 ( 无需以‘/’结尾 )
+    file-root-path: /jeepayhomes/service/uploads #存储根路径 ( 无需以‘/’结尾 )
     file-public-path: ${isys.oss.file-root-path}/public #公共读取块  ( 一般配合root-path参数进行设置，需以‘/’ 开头, 无需以‘/’结尾 )
     file-private-path: ${isys.oss.file-root-path}/private #私有化本地访问，不允许url方式公共读取 ( 一般配合root-path参数进行设置，需以‘/’ 开头, 无需以‘/’结尾  )
 
