--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,10 @@
     <jeepay.sdk.java.version>1.3.0</jeepay.sdk.java.version>
     <fastjson.version>1.2.83</fastjson.version> <!-- fastjson -->
     <mybatis.plus.starter.version>3.4.2</mybatis.plus.starter.version>  <!-- mybatis plus -->
-    <hutool.util.version>5.7.16</hutool.util.version>  <!-- hutool -->
+    <hutool.util.version>5.8.26</hutool.util.version>  <!-- hutool -->
     <spring.security.version>5.4.7</spring.security.version> <!-- 用于core的scope依赖 -->
     <jjwt.version>0.9.1</jjwt.version>
-    <binarywang.weixin.java.version>4.3.9.B</binarywang.weixin.java.version>
+    <binarywang.weixin.java.version>4.6.0</binarywang.weixin.java.version>
     <rocketmq.spring.boot.starter.version>2.2.0</rocketmq.spring.boot.starter.version>
     <aliyun-openservices-ons-client.version>1.8.8.1.Final</aliyun-openservices-ons-client.version>
 
