--- a/conf/payment/application.yml
+++ b/conf/payment/application.yml
@@ -90,7 +90,7 @@ spring:
 #  namesrvAddr: xxx
 #  accessKey: xxx
 #  secretKey: xxx
-#  groupId: GID_JEEPAY_T
+#  groupIdPrefix: GID_JEEPAY_ # (分组前缀，  具体名称详见AliyunRocketMQFactory.java )
 
 
   #日志配置参数。
