--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.8</version>
+    <version>3.3.7</version>
   </parent>
 
   <!-- 声明子项目 -->
@@ -38,23 +38,23 @@
 
     <isys.version>2.4.0</isys.version> <!-- 指定当前[项目]版本号 -->
     <projectRootDir>${basedir}</projectRootDir>
-    <java.version>1.8</java.version> <!-- 指定java版本号 -->
+    <java.version>17</java.version> <!-- 指定java版本号 -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> <!-- 项目构建输出编码 -->
 
     <!-- 其他工具包 -->
     <jeepay.sdk.java.version>1.3.0</jeepay.sdk.java.version>
     <fastjson.version>1.2.83</fastjson.version> <!-- fastjson -->
-    <mybatis.plus.starter.version>3.4.2</mybatis.plus.starter.version>  <!-- mybatis plus -->
+    <mybatis.plus.starter.version>3.5.7</mybatis.plus.starter.version>  <!-- mybatis plus -->
     <hutool.util.version>5.8.26</hutool.util.version>  <!-- hutool -->
-    <spring.security.version>5.4.7</spring.security.version> <!-- 用于core的scope依赖 -->
     <jjwt.version>0.9.1</jjwt.version>
     <binarywang.weixin.java.version>4.6.0</binarywang.weixin.java.version>
     <rocketmq.spring.boot.starter.version>2.2.0</rocketmq.spring.boot.starter.version>
     <aliyun-openservices-ons-client.version>1.8.8.5.Final</aliyun-openservices-ons-client.version>
+    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
 
     <mysql.version>8.0.28</mysql.version> <!-- 覆写 spring-boot-dependencies 的依赖版本号 -->
+    <mysql-connector-j.version>9.1.0</mysql-connector-j.version>
     <jaxb-api.version>2.3.0</jaxb-api.version>
-    <activemq.version>5.16.7</activemq.version>
 
   </properties>
 
@@ -105,13 +105,6 @@
             <version>${fastjson.version}</version>
         </dependency>
 
-        <!-- Spring Security -->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-            <version>${spring.security.version}</version>
-        </dependency>
-
         <!-- JWT  -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -134,8 +127,21 @@
 
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
             <version>${mybatis.plus.starter.version}</version>
+        </dependency>
+
+        <!-- MySql 数据库连接包 -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>${mysql-connector-j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>
         </dependency>
 
         <!-- 生成二维码依赖 -->
@@ -189,16 +195,16 @@
         <!-- Knife4j  -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
-            <version>4.1.0</version>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+            <version>4.5.0</version>
         </dependency>
 
         <!-- swagger注解包 -->
-        <dependency>
+        <!--<dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
             <version>1.6.6</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
