--- a/jeepay-core/pom.xml
+++ b/jeepay-core/pom.xml
@@ -84,12 +84,18 @@
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.swagger.core.v3</groupId>
+      <artifactId>swagger-annotations-jakarta</artifactId>
+      <version>2.2.22</version>
+      <scope>compile</scope>
+    </dependency>
 
     <!-- 所以项目依赖swagger注解包 -->
-    <dependency>
-      <groupId>io.swagger</groupId>
-      <artifactId>swagger-annotations</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.swagger</groupId>-->
+<!--      <artifactId>swagger-annotations</artifactId>-->
+<!--    </dependency>-->
 
   </dependencies>
 
