--- a/jeepay-merchant/src/main/resources/application.yml
+++ b/jeepay-merchant/src/main/resources/application.yml
@@ -9,3 +9,17 @@ spring:
 isys:
     jwt-secret: ARNXp4MzjOOQqxtv #生成jwt的秘钥。 要求每个系统有单独的秘钥管理机制。
 
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: /v3/api-docs
+  group-configs:
+    - group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan: com.jeequan.jeepay.mch.ctrl
+# knife4j APIDOC文档
+knife4j:
+  enable: true
