--- a/jeepay-payment/src/main/resources/application.yml
+++ b/jeepay-payment/src/main/resources/application.yml
@@ -2,8 +2,9 @@ server:
   port: 9216 #设置端口
 
 spring:
-  redis:
-    database: 3    #1库：运营平台  #2库：商户系统 #3库：支付网关
+  data:
+    redis:
+      database: 3    #1库：运营平台  #2库：商户系统 #3库：支付网关
 
 # knife4j APIDOC文档
 springdoc:
