--- a/conf/merchant/application.yml
+++ b/conf/merchant/application.yml
@@ -54,16 +54,17 @@ spring:
       connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
   cache:
     type: redis
-  redis:
-    host: redis6
-    port: 6379
-    database: 2    #1库：运营平台  #2库：商户系统 #3库：支付网关
-    timeout: 1000
-    password:
+  data:
+    redis:
+      host: redis6
+      port: 6379
+      database: 2    #1库：运营平台  #2库：商户系统 #3库：支付网关
+      timeout: 1000
+      password:
 
 # #activeMQ配置 ( 注意： activeMQ配置项需在spring的下级 )
   activemq:
-    broker-url: failover:(tcp://172.20.0.11:61616?wireFormat.maxInactivityDuration=0)  #连接地址
+    broker-url: failover:(tcp://activemq5:61616?wireFormat.maxInactivityDuration=0)  #连接地址
     in-memory: false # Jeepay项目不可使用内存模式， 需要连接多个消费者。
     user: system # activeMQ默认无需账密认证。 打开认证：activemq.xml添加simpleAuthenticationPlugin标签，账密在credentials.properties文件。
     password: manager
