--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <mybatis.plus.starter.version>3.5.7</mybatis.plus.starter.version>  <!-- mybatis plus -->
     <hutool.util.version>5.8.26</hutool.util.version>  <!-- hutool -->
     <jjwt.version>0.9.1</jjwt.version>
-    <binarywang.weixin.java.version>4.6.0</binarywang.weixin.java.version>
+    <binarywang.weixin.java.version>4.7.2.B</binarywang.weixin.java.version>
     <rocketmq.spring.boot.starter.version>2.2.0</rocketmq.spring.boot.starter.version>
     <aliyun-openservices-ons-client.version>1.8.8.5.Final</aliyun-openservices-ons-client.version>
     <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
